Fix patient filters and auth user counts
